fixed the disappearing <legend> on ie9
git-svn-id: https://aux1.edublogs.org/repos/incsub/trunk/plugins/appointments@7439 f53fe46e-8c02-459b-9fdd-93e75771b278

--- a/css/front.css
+++ b/css/front.css
@@ -84,6 +84,7 @@ table.appointments-legend-table {
 }
 table.appointments-legend-table  td{
 	padding-right: 10px;
+  padding-left: 10px;
 	text-align:right;
 	height: 20px;
 	min-width: 30px;
